--- a/src/components/Cardcomp.css
+++ b/src/components/Cardcomp.css
@@ -46,6 +46,10 @@
 	margin: 0;
 }
 
+.cardcomp__name{
+	width: 100px;
+}
+
 @media screen and (max-width: 740px) {
 	.cardcomp__smprice{
 		display: block;
