fixes for small devives

--- a/src/Home.css
+++ b/src/Home.css
@@ -158,7 +158,7 @@
 	padding: 4em 6%;
 	height: max-content;
 	display: flex;
-	gap: 3em;
+	gap: 35px;
 	/* position: absolute; */
 	/* display: none; */
 }
